libquantumida/g2/quantum_r_x
gates.c:365:7: warning: format specifies type 'int' but the argument has type 'unsigned long' [-Wformat]
             (reg->size + addsize) * sizeof(char));
             ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
gates.c:543:7: warning: format specifies type 'int' but the argument has type 'unsigned long' [-Wformat]
             (reg->size + addsize) * sizeof(char));
             ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
gates.c:1151:1: error: use of undeclared identifier 'complex_float'
complex_float *t; // rax 
^
gates.c:1151:16: error: use of undeclared identifier 't'
complex_float *t; // rax 
               ^
gates.c:1160:6: warning: implicit declaration of function 'COERCE_FLOAT' is invalid in C99 [-Wimplicit-function-declaration]
v5 = COERCE_FLOAT( _mm_cvtsi128_si32( a2)); 
     ^
gates.c:1161:68: error: member reference base type '__m128i' (vector of 2 'long long' values) is not a structure or union
if ( !quantum_objcode_put( 7u, ( unsigned int)target, *( float *)a2.m128i_i32) ) 
                                                                 ~~^~~~~~~~~~
gates.c:1164:1: warning: implicit declaration of function 'sincos' is invalid in C99 [-Wimplicit-function-declaration]
sincos( ( float)( v5 * 0.5), &sinx, &v10); 
^
gates.c:1165:1: error: use of undeclared identifier 't'
t = m.t; 
^
gates.c:1169:4: error: member reference base type '_Complex float' is not a structure or union
m.t->imag = 0.0; 
~~~^ ~~~~
gates.c:1171:1: error: use of undeclared identifier 't'
t[3].imag = 0.0; 
^
gates.c:1174:1: error: use of undeclared identifier 't'
t->real = v8; 
^
gates.c:1175:1: error: use of undeclared identifier 't'
t[1].imag = *( float *)&v7; 
^
gates.c:1176:1: error: use of undeclared identifier 't'
t[2].imag = *( float *)&v7; 
^
gates.c:1177:1: error: use of undeclared identifier 't'
t[3].real = v8; 
^
gates.c:1179:1: error: use of undeclared identifier 't'
t[1].real = *( float *)&v9; 
^
gates.c:1180:1: error: use of undeclared identifier 't'
t[2].real = *( float *)&v9; 
^
4 warnings and 12 errors generated.
objcode.c:176:18: warning: passing an object that undergoes default argument promotion to 'va_start' has undefined behavior [-Wvarargs]
  va_start(args, operation);
                 ^
objcode.c:165:35: note: parameter of type 'unsigned char' is declared here
quantum_objcode_put(unsigned char operation, ...)
                                  ^
1 warning generated.
